--- a/server/svix-server/Cargo.toml
+++ b/server/svix-server/Cargo.toml
@@ -35,8 +35,11 @@ enum_dispatch = "0.3.8"
 regex = "1.5.5"
 lazy_static = "1.4.0"
 figment = { version = "0.10", features = ["toml", "env", "test"] }
-tracing = "0.1.29"
+tracing = "0.1.35"
 tracing-subscriber = { version="0.3", features = ["env-filter", "json"] }
+tracing-opentelemetry = "0.17.3"
+opentelemetry = { version= "0.17", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "0.10" }
 validator = { version = "0.14.0", features = ["derive"] }
 jwt-simple = "0.10.8"
 chrono = { version="0.4.19", features = ["serde"] }
