--- a/server/svix-server/Cargo.toml
+++ b/server/svix-server/Cargo.toml
@@ -18,6 +18,7 @@ svix = "0.60"
 svix-ksuid = "^0.5.1"
 dotenv = "0.15.0"
 getrandom = "0.2.4"
+sha2 = "0.10.2"
 hmac-sha256 = "1"
 clap = { version = "3.2.1", features = ["derive"] }
 axum = { version = "0.5.1", features = ["headers"] }
@@ -39,6 +40,7 @@ tracing = "0.1.29"
 tracing-subscriber = { version="0.3", features = ["env-filter", "json"] }
 validator = { version = "0.14.0", features = ["derive"] }
 jwt-simple = "0.10.8"
+ed25519-compact = "1.0.11"
 chrono = { version="0.4.19", features = ["serde"] }
 reqwest = { version = "0.11.9", features = ["json", "rustls-tls", "trust-dns"], default-features = false }
 bb8 = "0.7.1"
